lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_string_encoded_hex_uc/buffer_append_string_encoded_hex_uc3/buffer_append_string_encoded_hex_uc3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_string_encoded_hex_uc/buffer_append_string_encoded_hex_uc3/buffer_append_string_encoded_hex_uc3.c:29:41: error: use of undeclared identifier 's__b'
    buffer_append_string_encoded_hex_uc(s__b ,p_q_b__s ,b_len );
                                        ^
1 error generated.
